Allow more than 2^31 hits in Contexts.